test/snapshot/negative/pass_registry_cycle/compile.hxml
-cp .
-lib reflaxe.go
-D go_output=out
-D reflaxe_go_test_registry_case=cycle
-main Main
